updated the playwright and cypress icons

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <div class="tech-stack-showcase">
                     <p class="tech-stack-label">Tech Stack:</p>
                     <div class="tech-icons">
-                        <span class="tech-icon" title="Playwright"><i class="fas fa-robot"></i> Playwright</span>
-                        <span class="tech-icon" title="Cypress"><i class="fas fa-circle-notch"></i> Cypress</span>
+                        <span class="tech-icon" title="Playwright"><i class="fas fa-theater-masks"></i> Playwright</span>
+                        <span class="tech-icon cypress-icon" title="Cypress"><span class="cy-text">cy</span> Cypress</span>
                         <span class="tech-icon" title="JavaScript"><i class="fab fa-js-square"></i> JavaScript</span>
                         <span class="tech-icon" title="GitHub"><i class="fab fa-github"></i> GitHub</span>
                         <span class="tech-icon" title="AWS"><i class="fab fa-aws"></i> AWS</span>
