--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
                     <div class="cert-icon">
                         <i class="fas fa-certificate"></i>
                     </div>
-                    <h3 class="cert-title">AWS Certified</h3>
-                    <p class="cert-detail">Cloud Practitioner</p>
+                    <h3 class="cert-title">AWS Certified AI Practitioner</h3>
+                    <p class="cert-detail">(in process)</p>
                     <p class="cert-institution">Amazon Web Services</p>
                 </div>
                 <div class="cert-card">
@@ -341,15 +341,15 @@
                         <i class="fas fa-check-circle"></i>
                     </div>
                     <h3 class="cert-title">Agile & Scrum</h3>
-                    <p class="cert-detail">Certified Professional</p>
-                    <p class="cert-institution">Scrum Alliance</p>
+                    <p class="cert-detail">Experienced Practitioner</p>
+                    <p class="cert-institution">10+ Years Experience</p>
                 </div>
                 <div class="cert-card">
                     <div class="cert-icon">
                         <i class="fab fa-github"></i>
                     </div>
                     <h3 class="cert-title">GitHub Actions</h3>
-                    <p class="cert-detail">CI/CD Specialist</p>
+                    <p class="cert-detail">CI/CD Experience</p>
                     <p class="cert-institution">GitHub</p>
                 </div>
             </div>
@@ -477,9 +477,6 @@
                             <p>Automated runs on every commit via GitHub Actions</p>
                         </div>
                     </div>
-                    <button class="view-code-btn" onclick="alert('View full code on GitHub')">
-                        <i class="fab fa-github"></i> View Code
-                    </button>
                 </div>
 
                 <!-- Cypress Automation Example -->
@@ -509,9 +506,6 @@
                             <p>95% pass rate with visual regression testing</p>
                         </div>
                     </div>
-                    <button class="view-code-btn" onclick="alert('View full code on GitHub')">
-                        <i class="fab fa-github"></i> View Code
-                    </button>
                 </div>
 
                 <!-- API Test Example -->
@@ -520,30 +514,27 @@
                         <i class="fas fa-code"></i>
                     </div>
                     <h3 class="test-example-title">API Testing</h3>
-                    <p class="test-example-id">Automated | Postman/Newman</p>
-                    <h4 class="test-scenario">REST API Test Suite</h4>
+                    <p class="test-example-id">Manual Testing | Postman</p>
+                    <h4 class="test-scenario">REST API Validation</h4>
                     <div class="test-example-details">
                         <div class="test-detail-item">
                             <strong>Tools:</strong>
-                            <p>Postman, Newman, Jest</p>
+                            <p>Postman</p>
                         </div>
                         <div class="test-detail-item">
-                            <strong>Test Coverage:</strong>
+                            <strong>Experience:</strong>
                             <ul>
-                                <li>Authentication endpoints</li>
-                                <li>CRUD operations</li>
-                                <li>Error response handling</li>
-                                <li>Performance benchmarks</li>
+                                <li>Endpoint validation</li>
+                                <li>Response status codes (200 OK, etc.)</li>
+                                <li>Request/response verification</li>
+                                <li>API documentation review</li>
                             </ul>
                         </div>
                         <div class="test-detail-item">
-                            <strong>Metrics:</strong>
-                            <p>500+ API tests with 98% reliability</p>
+                            <strong>Knowledge:</strong>
+                            <p>HTTP methods, status codes, and REST principles</p>
                         </div>
                     </div>
-                    <button class="view-code-btn" onclick="alert('View full code on GitHub')">
-                        <i class="fab fa-github"></i> View Code
-                    </button>
                 </div>
             </div>
 
@@ -820,15 +811,13 @@ test.describe('Practice Test Automation - Login Tests', () => {
                     <div class="testimonial-content">
                         <i class="fas fa-quote-left quote-icon"></i>
                         <p class="testimonial-text">
-                            "Scott's expertise in test automation transformed our QA process. His implementation of Playwright 
-                            reduced our testing time significantly and caught critical issues before production. A true professional 
-                            who understands both the technical and business aspects of quality assurance."
+                            "I had the pleasure of managing Scott during his time as a Quality Engineer on our State Assessment team, and I can confidently say he is a very capable and dedicated professional. Scott consistently demonstrated excellence in his role, developing and executing thorough testing strategies across multiple stages to ensure our product met the high standards required by our State Clients. His attention to detail and commitment to quality were instrumental in our success. Beyond his core responsibilities, Scott took initiative to create clear and effective job aids and documentation that greatly benefited the team. He managed production deployments with precision, swiftly logged and resolved critical bugs, and introduced automation to streamline testing processes—driving significant efficiency gains. Scott is a quick thinker, self-motivated, and easy to work with. He collaborates with teammates and brings a positive, solutions-oriented attitude to every challenge. I highly recommend Scott for any role requiring a sharp, reliable, and team-focused Quality Engineer. He will be an asset to any organization lucky enough to have him."
                         </p>
                     </div>
                     <div class="testimonial-author">
                         <div class="author-info">
-                            <h4 class="author-name">Sarah Johnson</h4>
-                            <p class="author-title">Engineering Manager, HMH</p>
+                            <h4 class="author-name">Debby Willmus</h4>
+                            <p class="author-title">Senior Manager, Quality Engineering at HMH</p>
                         </div>
                         <i class="fab fa-linkedin testimonial-linkedin"></i>
                     </div>
@@ -838,33 +827,13 @@ test.describe('Practice Test Automation - Login Tests', () => {
                     <div class="testimonial-content">
                         <i class="fas fa-quote-left quote-icon"></i>
                         <p class="testimonial-text">
-                            "Working with Scott was exceptional. His attention to detail and systematic approach to testing 
-                            helped us maintain high quality standards across multiple projects. His documentation and process 
-                            improvements continue to benefit our team long after project completion."
+                            "As a Technical Project Manager, I was fortunate to have Scott as the lead Quality Engineer on my projects. His thorough regression and bug testing helped ensure releases of new feature and configurations were a success. I especially appreciated Scott's ability to manage the overlap of multiple critical tasks with efficiency. He consistently met deadlines without sacrificing quality. In addition to his technical expertise, Scott is a genuinely pleasant and fun person to work with. Between his skills and attitude, Scott will be an amazing addition to any team!"
                         </p>
                     </div>
                     <div class="testimonial-author">
                         <div class="author-info">
-                            <h4 class="author-name">Michael Chen</h4>
-                            <p class="author-title">Lead Developer, NWEA</p>
-                        </div>
-                        <i class="fab fa-linkedin testimonial-linkedin"></i>
-                    </div>
-                </div>
-
-                <div class="testimonial-card">
-                    <div class="testimonial-content">
-                        <i class="fas fa-quote-left quote-icon"></i>
-                        <p class="testimonial-text">
-                            "Scott's ability to collaborate across teams and communicate complex testing strategies in simple 
-                            terms made him invaluable. His automation frameworks are still the foundation of our CI/CD pipeline. 
-                            Highly recommend him for any QA automation role."
-                        </p>
-                    </div>
-                    <div class="testimonial-author">
-                        <div class="author-info">
-                            <h4 class="author-name">Jennifer Martinez</h4>
-                            <p class="author-title">Product Owner, U.S. Bank</p>
+                            <h4 class="author-name">Michelle Sorem, PMP</h4>
+                            <p class="author-title">Senior Technical Product Manager</p>
                         </div>
                         <i class="fab fa-linkedin testimonial-linkedin"></i>
                     </div>
